# hd2-app

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Taskfile.yml  api.py  docker-compose.yml  prod.Dockerfile  pyproject.toml
.github/workflows/: build-and-push.yaml
infra/helm/hd2-app/: Chart.yaml  values.yaml
infra/helm/hd2-app/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
infra/helm/hd2-app/templates/tests/: test-connection.yaml
src/: settings.py
src/lib/: cache.py  rate_limit.py
src/routers/: planets.py  warbonds.py  weapons.py
src/schemas/: base.py  planets.py  warbonds.py  weapons.py
